namespace SokoHub.Domain.Modules.Finance;

public class VendorPayout
{
}
